# TNTNSimulator

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  README.md  TNTNSimulator.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  tntn-simulator.vcxproj  tntn-simulator.vcxproj.filters
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/tracks/core_simulator_20260119/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/physics_tuning_20260119/: index.md  metadata.json  plan.md  spec.md
docs/: API.md
include/examples/: BasicMovement.hpp
include/graphics/: Renderer.hpp
include/physics/: Matrix.hpp  PhysicsEngine.h  PhysicsEngine.hpp  RigidBody.h  RigidBody.hpp  Vector2D.h  Vector2D.hpp
include/robot/: Encoder.hpp  InertialSensor.hpp  Motor.hpp  Robot.h  Robot.hpp
reference/: omniwheels.cpp  sim.py
src/: main.cpp
src/examples/: BasicMovement.cpp
src/physics/: PhysicsEngine.cpp
src/robot/: Robot.cpp
tests/: physics_test.cpp
tntn-simulator.dir/Debug/tntn-simulator.tlog/: CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  tntn-simulator.lastbuildstate
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
